[package]
name = "spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
image = "0.23"
scraper = "0.13.0"
rayon = "1.10.0"
rand = "0.8.5"
rusqlite = "0.31.0"
bytes = "1.0"
anyhow = "1.0"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4.14"
simple_logger = "1.14.0"
async-recursion = "1.1.1"

